<resources>
    <string name="app_name">SyncVj</string>
    <string name="admin">ADMIN</string>
    <string name="share">SHARE</string>
    <string name="about">ABOUT</string>
    <string name="exit">EXIT</string>
    <string name="navigation_open">Open navigation bar</string>
    <string name="navigation_close">Close navigation bar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="loginText">ADMIN</string>
    <string name="cse">CSE</string>
    <string name="eee">EEE</string>
    <string name="ece">ECE</string>
    <string name="aie">AIE</string>
    <string name="ce">CE</string>
    <string name="me">ME</string>
    <string name="ash">ASH</string>
    <string name="todo">TODO</string>
    <string name="white_background_image">white background image</string>
    <string name="vjec_logo">vjec logo</string>
    <string name="vjec">VJEC</string>
    <string name="vjim">VJIM</string>
    <string name="sync">Sync</string>
    <string name="hello_admin">HELLO ADMIN</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="departments">DEPARTMENTS</string>
    <string name="administration">ADMINISTRATION</string>
    <string name="general_facilities">GENERAL FACILITIES</string>
    <string name="frequents">Frequents</string>
    <string name="staff">STAFF</string>
    <string name="add">ADD</string>
    <string name="intercom_number">Intercom Number</string>
    <string name="department">Department</string>
    <string name="admin_view">Admin View</string>
    <string name="user_view">User View</string>
    <string name="arrow">arrow</string>
    <string name="name">Name</string>
    <string name="designation">Designation</string>
    <string name="post">Post</string>
    <string name="number">Number</string>
    <string name="email">Email</string>
    <string name="intercom">INTERCOM</string>
    <string name="add_new">ADD NEW</string>
    <string name="edit" />
    <string name="about_message">"SyncVJ is an app which is designed to connect all the teaching and non teaching staff of VJEC and VJIM. It is a user-friendly app which helps to access, navigate and manage contact details of the staff effortlessly.</string>
    <string name="header">header</string>
    <string name="verify_code">Verify Code</string>
</resources>