<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/colour">

    <Spinner
        android:id="@+id/spinnerDesig"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"/>

    <EditText
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints=""
        android:fontFamily="@font/montserrat"
        android:hint="@string/post"
        android:inputType="textCapWords"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/number"
        android:inputType="number|text|phone"
        android:textSize="20sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:autofillHints="" />


    <Spinner
        android:id="@+id/spinnerDept"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/insertbut"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:onClick="addNewDeptStaff"
            android:text="@string/add" />


    </LinearLayout>


</LinearLayout>