<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colour">

    <TextView
        android:id="@+id/lookView1_intercomm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lookView2_intercomm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/post"
        android:inputType="text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lookView3_intercomm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/number"
        android:inputType="phone"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/lookView4_intercomm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/department"
        android:inputType="text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/editCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="Edit" />



</LinearLayout>