<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colour">

    <EditText
        android:id="@+id/updateView1_intercomm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/updatetView2_intercomm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/post"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/updateView3_intercomm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="Intercom Number"
        android:inputType="phone"
        android:autofillHints="" />

    <EditText
        android:id="@+id/updateView4_intercomm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints=""
        android:hint="@string/department"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/update_intercomm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Update"
            android:layout_marginStart="10dp" />
        <Button
            android:id="@+id/delete_intercomm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Delete"
            android:layout_marginStart="10dp" />
    </LinearLayout>

</LinearLayout>