<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/rectvectorvjec1"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/vjecDeptButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_alignStart="@id/imageView"
        android:layout_alignLeft="@id/imageView"
        android:layout_alignTop="@id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/mybutton"
        android:fontFamily="@font/montserrat"
        android:gravity="center|center_horizontal"
        android:text="@string/departments"
        android:textAlignment="center"
        android:textColor="#1B2B49"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.089"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/vjecAdministrationButton"

        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_alignStart="@id/imageView"
        android:layout_alignLeft="@id/imageView"
        android:layout_alignTop="@id/vjecDeptButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/mybutton"
        android:fontFamily="@font/montserrat"
        android:gravity="center|center_horizontal"
        android:text="@string/administration"
        android:textAlignment="center"
        android:textColor="#1B2B49"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.313"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/vjecIntercomButton"
        android:layout_width="200dp"
        android:layout_height="80dp"

        android:layout_alignTop="@id/vjecAdministrationButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/mybutton"
        android:fontFamily="@font/montserrat"
        android:gravity="center|center_horizontal"
        android:text="@string/intercom"
        android:textAlignment="center"
        android:textColor="#1B2B49"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.525"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/vjecGeneralFacilitiesButton"
        android:layout_width="200dp"
        android:layout_height="80dp"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/mybutton"
        android:fontFamily="@font/montserrat"
        android:gravity="center|center_horizontal"
        android:text="@string/general_facilities"
        android:textAlignment="center"
        android:textColor="#1B2B49"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.731"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/vjecUsefulLinksButton"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_alignStart="@id/imageView"
        android:layout_alignLeft="@id/imageView"
        android:layout_alignTop="@id/vjecGeneralFacilitiesButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:background="@drawable/mybutton"
        android:fontFamily="@font/montserrat"
        android:gravity="center|center_horizontal"
        android:text="@string/frequents"
        android:textAlignment="center"
        android:textColor="#1B2B49"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.932"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
