<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:padding="10dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/rectvectorvjec1" />

        <Button
            android:id="@+id/ASHButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignStart="@id/imageView"
            android:layout_alignLeft="@id/imageView"
            android:layout_alignTop="@id/imageView"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/montserrat"

            android:gravity="center|center_horizontal"
            android:text="@string/ash"
            android:textAlignment="center"
            android:textColor="#1B2B49"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/CEButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_alignStart="@id/imageView"
            android:layout_alignLeft="@id/imageView"
            android:layout_alignTop="@id/ASHButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal"

            android:text="CE"
            android:textAlignment="center"
            android:textColor="#1B2B49"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/CSEButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_alignStart="@id/imageView"
            android:layout_alignLeft="@id/imageView"
            android:layout_alignTop="@id/CEButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal"

            android:text="cse"
            android:textAlignment="center"
            android:textColor="#1B2B49"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ECEButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_alignStart="@id/imageView"
            android:layout_alignLeft="@id/imageView"
            android:layout_alignTop="@id/CSEButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/montserrat"

            android:gravity="center|center_horizontal"

            android:text="ece"
            android:textAlignment="center"
            android:textColor="#1B2B49"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/EEEButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_alignStart="@id/imageView"
            android:layout_alignLeft="@id/imageView"
            android:layout_alignTop="@id/ECEButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal"

            android:text="eee"
            android:textAlignment="center"
            android:textColor="#1B2B49"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/IEButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_alignStart="@id/imageView"
            android:layout_alignLeft="@id/imageView"
            android:layout_alignTop="@+id/EEEButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"

            android:background="@drawable/mybutton"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal"

            android:text="IE"
            android:textAlignment="center"
            android:textColor="#1B2B49"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/MEButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_alignStart="@id/imageView"
            android:layout_alignLeft="@id/imageView"

            android:layout_alignTop="@+id/IEButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"

            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"

            android:layout_marginBottom="100dp"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/montserrat"
            android:gravity="center|center_horizontal"
            android:text="@string/me"
            android:textAlignment="center"
            android:textColor="#1B2B49"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>
